make the project java 8 compatible